[package]
categories = ["network-programming"]
description = "Python-native longest-prefix lookup engine for high-volume ASN/prefix enrichment"
edition = "2018"
keywords = ["routing", "bgp"]
license = "BSD-3-Clause"
name = "roto-api-native"
version = "0.2.2"
exclude = [".tmp/*", ".pkgtest/*", "target/*", "data/*"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "^0.12"
chrono = "0.4.20"
csv = "^1.3"
num = "^0.3"
pyo3 = {version = "0.21", features = ["extension-module", "abi3-py39"]}
rotonda-store = "0.2.0"
