[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "roto-api-native"
version = "0.2.1"
description = "Python-native bindings for roto-api longest-prefix lookups"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
keywords = ["bgp", "prefix", "asn", "routing", "roa", "rpki"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.5,<2.0",
    "pytest>=8,<9",
    "twine>=5,<6",
]

[tool.maturin]
python-source = "python"
module-name = "roto_api._native"
bindings = "pyo3"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
